--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -27,20 +27,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ipv_ZZF0zYPi",
-        "outputId": "bc918884-0f36-48aa-8922-9796f16b2cd4"
+        "outputId": "06be95d9-7edf-4234-b2b8-476fbe7328b7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'>\n"
+            "<class 'str'>\n"
           ]
         }
       ],
@@ -50,8 +50,8 @@
         "# ESTUDANTE: ?\n",
         "# print('Maurício')\n",
         "# tipos primitivos De dados\n",
-        "c = 10\n",
-        "print(type(c))\n"
+        "m = 'Maurício'\n",
+        "print(type(m))\n"
       ]
     }
   ]
