--- a/desafio.ipynb
+++ b/desafio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOa2Am8B1VhEA6rZIZKH9S",
+      "authorship_tag": "ABX9TyPUlMchZasQXKajRko/kHyD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "outputs": [],
       "source": [
         "# ETE CÍCERO DIAS\n",
-        "# DOCENTE: ALMIR HENRIQUE\n",
+        "# DOCENTE: MAURÍCIO CUNHA\n",
         "# ESTUDANTE: ...\n",
         "# PNT - TIPOS PRIMITIVOS DE DADOS\n",
         "#print('Olá mundo!')\n",
