--- a/desafio.ipynb
+++ b/desafio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUlMchZasQXKajRko/kHyD",
+      "authorship_tag": "ABX9TyPhKAg9HH5sbKFixIsafGz3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "70mbwPn5BKb-"
+        "id": "70mbwPn5BKb-",
+        "outputId": "8bc35bcb-188b-43d2-bc4a-485fa1293893",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá ETE CÍCERO DIAS!\n"
+          ]
+        }
+      ],
       "source": [
         "# ETE CÍCERO DIAS\n",
         "# DOCENTE: MAURÍCIO CUNHA\n",
-        "# ESTUDANTE: ...\n",
+        "# ESTUDANTE: MAURÍCIO CUNHA\n",
         "# PNT - TIPOS PRIMITIVOS DE DADOS\n",
-        "#print('Olá mundo!')\n",
-        "\n",
-        "c = 9.9\n",
-        "print(type(c))\n"
+        "print('Olá ETE CÍCERO DIAS!')\n",
+        "#QUESTÃO 1\n"
       ]
     },
     {
@@ -58,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9xD_nKZTYHI0",
-        "outputId": "58c769cd-c7c9-4d0a-f44b-15d1e7fd2b01"
+        "outputId": "6c127c78-d476-4a96-b1da-2e7d9f1277e4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,17 +100,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T4B2GhUQXrHn",
-        "outputId": "3a43d276-1211-47a3-c53b-5875b1c27b19"
+        "outputId": "2457a28c-a9df-4b53-d69b-3029596b11d2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o primeiro número: 8\n",
-            "Digite o segundo número: 5\n",
-            "A soma de 8.0 e 5.0 é igual a 13.0\n"
+            "Digite o primeiro número: 2\n",
+            "Digite o segundo número: 2\n",
+            "A soma de 2.0 e 2.0 é igual a 4.0\n"
           ]
         }
       ]
@@ -125,19 +135,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F9XOBh6OX7sN",
-        "outputId": "d79d4496-08c3-4231-a9fa-ae07ab203a54"
+        "outputId": "22e7c3d6-3f77-4d16-d5d2-55c251e10521"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Digite a nota do 1º bimestre: 8\n",
-            "Digite a nota do 2º bimestre: 1\n",
-            "Digite a nota do 3º bimestre: 6\n",
-            "Digite a nota do 4º bimestre: 9\n",
-            "A média final das notas é: 6.0\n"
+            "Digite a nota do 2º bimestre: 7\n",
+            "Digite a nota do 3º bimestre: 9\n",
+            "Digite a nota do 4º bimestre: 4\n",
+            "A média final das notas é: 7.0\n"
           ]
         }
       ]
@@ -149,7 +159,7 @@
         "metros = float(input(\"Digite a medida em metros: \"))\n",
         "\n",
         "# Converte metros para centímetros\n",
-        "centimetros = metros * 100\n",
+        "centimetros = metros * 10\n",
         "\n",
         "# Exibe o resultado da conversão\n",
         "print(f\"{metros} metros equivalem a {centimetros} centímetros\")"
@@ -159,16 +169,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ij--KsZXX-ZV",
-        "outputId": "ae6f4f2c-6099-4e44-d687-ccfd62d59be6"
+        "outputId": "af221e2e-3dd5-4661-ac36-0ea3951b31d3"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite a medida em metros: 1\n",
-            "1.0 metros equivalem a 100.0 centímetros\n"
+            "Digite a medida em metros: 170\n",
+            "170.0 metros equivalem a 1700.0 centímetros\n"
           ]
         }
       ]
@@ -192,16 +202,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MeyvJRFMYaE8",
-        "outputId": "0b0a3c1b-8e3d-4cd3-e7b6-c84eb9fc0b76"
+        "outputId": "d3ef3444-0eac-4dae-c874-60fe36b27ec2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o raio do círculo: 5\n",
-            "A área do círculo com raio 5.0 é igual a 78.54\n"
+            "Digite o raio do círculo: 7\n",
+            "A área do círculo com raio 7.0 é igual a 153.94\n"
           ]
         }
       ]
@@ -226,16 +236,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuhIViZzYry7",
-        "outputId": "d9991a72-ef75-46c2-918f-8c823b904c51"
+        "outputId": "b531f512-0e62-4c8b-a911-96cbf53ae11e"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o comprimento de um lado do quadrado: 6\n",
-            "A área do quadrado é 36.0 e o dobro da área é 72.0\n"
+            "Digite o comprimento de um lado do quadrado: 10\n",
+            "A área do quadrado é 100.0 e o dobro da área é 200.0\n"
           ]
         }
       ]
@@ -258,17 +268,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Df37uqzmY3j6",
-        "outputId": "ceeeda28-2bc7-4a17-8444-271819f16e77"
+        "outputId": "49c9cf30-98c3-4068-f8c8-8b746348a7a2"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o valor que você ganha por hora: 40.0\n",
-            "Digite o número de horas trabalhadas no mês: 9.0\n",
-            "Seu salário no mês é de R$ 360.00\n"
+            "Digite o valor que você ganha por hora: 9\n",
+            "Digite o número de horas trabalhadas no mês: 176\n",
+            "Seu salário no mês é de R$ 1584.00\n"
           ]
         }
       ]
@@ -292,16 +302,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DhiTPyHwZinw",
-        "outputId": "7972cceb-e8e4-425e-bc10-b0522c385518"
+        "outputId": "76ea303b-2213-46cc-c71c-35617337e0c7"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um valor: -1\n",
-            "O valor é negativo.\n"
+            "Digite um valor: 10\n",
+            "O valor é positivo.\n"
           ]
         }
       ]
@@ -325,49 +335,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Mhik9vGZsyn",
-        "outputId": "8aaa0162-01d9-40e6-a26c-cb4e7d94cb5c"
+        "outputId": "96fcd218-2f97-40a0-c866-2a82d49c8f20"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um valor: 1\n",
+            "Digite um valor: 10\n",
             "O valor é positivo.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Solicita uma letra ao usuário\n",
-        "letra = input(\"Digite uma letra (F para Feminino, M para Masculino): \")\n",
-        "\n",
-        "# Verifica se a letra corresponde a um gênero\n",
-        "if letra == \"F\" or letra == \"f\":\n",
-        "    print(\"Feminino\")\n",
-        "elif letra == \"M\" or letra == \"m\":\n",
-        "    print(\"Masculino\")\n",
-        "else:\n",
-        "    print(\"Sexo Inválido\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Wk0oIvRvZ6HX",
-        "outputId": "d49fa92e-126d-42cf-86e1-8ab228fea0ef"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite uma letra (F para Feminino, M para Masculino): m\n",
-            "Masculino\n"
           ]
         }
       ]
@@ -391,16 +368,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XbtmZ5NSaB7e",
-        "outputId": "50ec7508-2fc8-45d4-9fa3-270cab98fa0e"
+        "outputId": "a6482874-6e8b-43df-d9ce-f298340fa01f"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite uma letra (F para Feminino, M para Masculino): f\n",
-            "Feminino\n"
+            "Digite uma letra (F para Feminino, M para Masculino): M\n",
+            "Masculino\n"
           ]
         }
       ]
