--- a/desafio.ipynb
+++ b/desafio.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhKAg9HH5sbKFixIsafGz3",
+      "authorship_tag": "ABX9TyOX7RcYLDobDSsX2Hsvs/vM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "70mbwPn5BKb-",
-        "outputId": "8bc35bcb-188b-43d2-bc4a-485fa1293893",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8bc35bcb-188b-43d2-bc4a-485fa1293893"
       },
       "outputs": [
         {
@@ -57,11 +57,13 @@
     {
       "cell_type": "code",
       "source": [
+        "from pickle import OBJ\n",
         "# Solicita um número ao usuário\n",
         "numero = input(\"Digite um número: \")\n",
         "\n",
         "# Exibe a mensagem com o número informado\n",
-        "print(f\"O número informado foi {numero}\")"
+        "print(f\"O número informado foi {numero}\")\n",
+        "#QUESTÃO2"
       ],
       "metadata": {
         "colab": {
@@ -93,7 +95,8 @@
         "soma = numero1 + numero2\n",
         "\n",
         "# Exibe o resultado da soma\n",
-        "print(f\"A soma de {numero1} e {numero2} é igual a {soma}\")"
+        "print(f\"A soma de {numero1} e {numero2} é igual a {soma}\")\n",
+        "#QUESTÃO3"
       ],
       "metadata": {
         "colab": {
@@ -128,7 +131,8 @@
         "media = (nota1 + nota2 + nota3 + nota4) / 4\n",
         "\n",
         "# Exibe a média final\n",
-        "print(f\"A média final das notas é: {media}\")"
+        "print(f\"A média final das notas é: {media}\")\n",
+        "#QUESTÃO4"
       ],
       "metadata": {
         "colab": {
@@ -162,7 +166,8 @@
         "centimetros = metros * 10\n",
         "\n",
         "# Exibe o resultado da conversão\n",
-        "print(f\"{metros} metros equivalem a {centimetros} centímetros\")"
+        "print(f\"{metros} metros equivalem a {centimetros} centímetros\")\n",
+        "#QUESTÃO5"
       ],
       "metadata": {
         "colab": {
@@ -195,7 +200,8 @@
         "area = math.pi * raio ** 2\n",
         "\n",
         "# Exibe o resultado\n",
-        "print(f\"A área do círculo com raio {raio} é igual a {area:.2f}\")"
+        "print(f\"A área do círculo com raio {raio} é igual a {area:.2f}\")\n",
+        "#QUESTÃO6"
       ],
       "metadata": {
         "colab": {
@@ -229,7 +235,8 @@
         "dobro_da_area = 2 * area\n",
         "\n",
         "# Exibe o resultado\n",
-        "print(f\"A área do quadrado é {area} e o dobro da área é {dobro_da_area}\")"
+        "print(f\"A área do quadrado é {area} e o dobro da área é {dobro_da_area}\")\n",
+        "#QUESTÃO7"
       ],
       "metadata": {
         "colab": {
@@ -261,7 +268,8 @@
         "salario_mensal = valor_por_hora * horas_trabalhadas\n",
         "\n",
         "# Exibe o resultado\n",
-        "print(f\"Seu salário no mês é de R$ {salario_mensal:.2f}\")"
+        "print(f\"Seu salário no mês é de R$ {salario_mensal:.2f}\")\n",
+        "#QUESTÃO8"
       ],
       "metadata": {
         "colab": {
@@ -295,40 +303,8 @@
         "elif valor < 0:\n",
         "    print(\"O valor é negativo.\")\n",
         "else:\n",
-        "    print(\"O valor é igual a zero.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DhiTPyHwZinw",
-        "outputId": "76ea303b-2213-46cc-c71c-35617337e0c7"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite um valor: 10\n",
-            "O valor é positivo.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Solicita um valor ao usuário\n",
-        "valor = float(input(\"Digite um valor: \"))\n",
-        "\n",
-        "# Verifica se o valor é positivo, negativo ou zero\n",
-        "if valor > 0:\n",
-        "    print(\"O valor é positivo.\")\n",
-        "elif valor < 0:\n",
-        "    print(\"O valor é negativo.\")\n",
-        "else:\n",
-        "    print(\"O valor é igual a zero.\")"
+        "    print(\"O valor é igual a zero.\")\n",
+        "    #QUESTÃO9"
       ],
       "metadata": {
         "colab": {
@@ -361,7 +337,8 @@
         "elif letra == \"M\" or letra == \"m\":\n",
         "    print(\"Masculino\")\n",
         "else:\n",
-        "    print(\"Sexo Inválido\")\n"
+        "    print(\"Sexo Inválido\")\n",
+        "    #QUESTÃO10\n"
       ],
       "metadata": {
         "colab": {
